# MessageQueue

./: README.md
mainApp/: CMakeLists.txt  main.cpp
mainApp/headers/: foo.h
mainApp/sources/: foo.cpp
subApp/: CMakeLists.txt  main.cpp
subApp/headers/: foo.h
subApp/sources/: foo.cpp
